--- a/index.html
+++ b/index.html
@@ -4,23 +4,17 @@
     <meta charset="utf-8">
     <title>Welcome to Outer Space</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Latest compiled and minified CSS -->
     <link a href="https://fonts.googleapis.com/css?family=Lato:400,700,300|Open+Sans:400,600,700,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/animations.css">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" type="text/css" href="css/master.css">
   </head>
   <body>
     <section class="bg-image-2">
       <header class="main-header" id="header">
-        <!-- <video playsinline autoplay muted loop poster="" id="bgvid">
-            <source src="img/flowers.webm" type="video/webm">
-            <source src="img/flowers.mp4" type="video/mp4">
-        </video> -->
         <div class="bg-color">
-          <!--nav-->
           <nav class="nav navbar-default navbar-fixed-top">
             <div class="container fluid">
               <div class="col-xs-12">
@@ -41,10 +35,8 @@
               </div>
             </div>
           </nav>
-          <!--/ nav-->
           <div class="container text-center">
             <div class="wrapper wow fadeInUp delay-02s">
-              <!-- <h2 class="top-title">Profile Page</h2> -->
               <h3 class="title">SEAN PHILLIPS</h3>
               <h4 class="sub-title">Marketing Analytics</h4>
               <a href="#contact" class="btn btn-submit">Contact</a>
@@ -70,9 +62,8 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">Growth Mindset</h3>
-                <p class="">Return on Investment has many faces.</p>
-                <p class="">You'll always know what action to take both in the short and long run.</p>
-
+                <p class="">ROI has many aspects.</p>
+                <p class="">You'll always know what to do in the short and long run.</p>
               </div>
             </div>
             <div class="col-md-6 wow fadeIn delay-01s">
@@ -83,7 +74,7 @@
                 <h3 class="txt-tl">I'm Pretty Friendly</h3>
                 <p class="">I'm a team player. I collaborate. I give honest feedback.</p>
                 <p class="">
-                  Warmth and transparency are the backbone of any organization.
+                  Transparency is the backbone of effective organization.
                 </p>
               </div>
             </div>
@@ -107,26 +98,15 @@
               </div>
               <div class="icon-text">
                 <h3 class="txt-tl">I Research. A Lot.</h3>
-                <p class="">Research is the lifeblood of data.</p>
-                <p class="">I keep on my toes so I can tackle your company's challenges that much faster.
+                <p class="">Research is the lifeblood of analytics.</p>
+                <p class="">I keep fresh on new approaches so I can tackle your company's challenges that much faster.
                 </p>
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-6 wow fadeIn delay-01s">
-              <div class="icon">
-                <i class="fa fa-sign-language"></i>
-              </div>
-              <div class="icon-text">
-                <h3 class="txt-tl">Jazz Hands</h3>
-                <p class="">Ah cha cha cha.
-                </p>
-              </div>
-            </div> -->
         </div>
       </div>
     </section>
-    <!---->
     <section class="section-padding parallax bg-image-2 section wow fadeIn delay-01s" id="cta-2">
       <div class="container">
         <div class="row">
@@ -147,11 +127,11 @@
     <section id="resume" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-md-3 ">
+          <div class="col-md-12">
             <div class="section-title">
               <h2 class="head-title">Work Experience</h2>
               <hr class="botm-line">
-              <p class="sec-para">Experience in business insight research, analysis, and presentation with track record of success</p>
+              <p class="sec-para">Experience in business insight research, analysis, and presentation with track record of success.</p>
             </div>
           </div>
           <div class="col-md-12">
@@ -222,88 +202,9 @@
               </div>
             </center>
           </div>
-          <!-- <div class="col-md-4 text-center">
-            <a href="#contact" class="btn btn-submit">Heed the Call</a>
-          </div> -->
         </div>
       </div>
     </section>
-    <!-- <section id="resume2" class="section-padding">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3 ">
-        <div class="section-title">
-          <h2 class="head-title">Skills and Qualifications</h2>
-          <hr class="botm-line">
-          <p class="sec-para"></p>
-        </div>
-      </div>
-      <div class="col-md-12">
-        <div class="col-md-6 wow fadeIn delay-01s">
-          <div class="icon">
-            <i class="fa fa-line-chart"></i>
-          </div>
-          <div class="icon-text">
-            <h3 class="txt-tl">Marketing Associate</h3>
-            <p class="">
-              <em>Credit Sesame - Feb 2017 - Jul 2017</em>
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6 wow fadeIn delay-01s">
-          <div class="icon">
-            <i class="fa fa-car"></i>
-          </div>
-          <div class="icon-text">
-            <h3 class="txt-tl">Operations</h3>
-            <p class="">
-              <em>WorkCar - Sep 2015 - Dec 2016</em>
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6 wow fadeIn delay-01s">
-          <div class="icon">
-            <i class="fa fa-pie-chart"></i>
-          </div>
-          <div class="icon-text">
-            <h3 class="txt-tl">Social Media Marketing Analyst</h3>
-            <p class="">
-              <em>Riverine - Feb 2014 - Aug 2015</em>
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6 wow fadeIn delay-01s">
-          <div class="icon">
-            <i class="fa fa-book"></i>
-          </div>
-          <div class="icon-text">
-            <h3 class="txt-tl">Market Research Analyst</h3>
-            <p class="">
-              <em>Sound Medical Systems - Sep 2013 - Feb 2014</em>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-    <!-- <section class="section-padding parallax bg-image-2 section wow fadeIn delay-01s" id="cta-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="cta-txt">
-              <h3>The trees. They whisper softly with the wind.</h3>
-              <p>Through the rustling, you hear only one phrase:
-                <em>"hire me"</em>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-4 text-center">
-            <a href="#contact" class="btn btn-submit">Contact</a>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <section class="section-padding wow fadeIn delay-01s" id="contact">
       <div class="container">
         <div class="row white">
@@ -344,9 +245,6 @@
             </div>
             <div class="col-sm-5 footer-social">
               <div class="pull-right hidden-xs hidden-sm">
-                <!-- <a href="#">
-                <i class="fa fa-facebook"></i>
-              </a> -->
               </div>
             </div>
           </div>
@@ -359,11 +257,6 @@
     <script src="js/wow.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/css3-animate-it.js"></script>
-    <!--[if lt IE 9]>
-    <script>
-    	document.createElement('video');
-    </script>
-    <![endif]-->
   </body>
 
 </html>
