--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/master.css">
   </head>
   <body>
-    <section class="bg-image-2">
+    <section class="bg-image-forest-top">
       <header class="main-header" id="header">
         <div class="bg-color">
           <nav class="nav navbar-default navbar-fixed-top">
@@ -107,7 +107,7 @@
         </div>
       </div>
     </section>
-    <section class="section-padding parallax bg-image-2 section wow fadeIn delay-01s" id="cta-2">
+    <section class="section-padding parallax bg-image-forest section wow fadeIn delay-01s" id="cta-2">
       <div class="container">
         <div class="row">
           <div class="col-md-8">
@@ -183,7 +183,7 @@
         </div>
       </div>
     </section>
-    <section class="section-padding bg-image-2 parallax section wow fadeIn delay-01s" id="cta-3">
+    <section class="section-padding bg-image-uni parallax section wow fadeIn delay-01s" id="cta-3">
       <div class="container">
         <div class="row row-centered">
           <div class="col-xs-12 col-md-8 col-centered">
