--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
                     </div>
                     <div class="icon-text">
                         <h3 class="txt-tl">Growth Mindset</h3>
-                        <p class="">I'm always improving.</p>
-                        <p class="">Investments improve over time.</p>
-                        <p class="">And that's exactly what I am.</p>
+                        <p class="">Investments improve over time--</p>
+                        <p class="">And I'm always improving.</p>
 
                     </div>
                 </div>
@@ -148,7 +147,7 @@
                         <h1 class="txt-tl">Data Analyst</h1>
                         <p class="">
                         <h3>Butler, Shine, Stern, & Partners</h3>
-                        <em>Jul 2017 - <strong>Present</strong></em>
+                        <em>Jul 2017 - Mar 2018</em>
                         </p>
                     </div>
                 </div>
